--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -1,14 +1,9 @@
 :root {
-  --white-color: #ffffff;
-  --purple-color: #883cda;
-  --black-color: #141516;
-  --pink-color: #fb7c84;
-  --lt-orange-color: #ffb865;
-  --lt-green-color: #d4ee47;
-  --aquamarine-color: #6ed6a4;
-  --lt-blue-color: #5ac4ff;
-  --lt-gray-color: #f8f8f8;
-  --shadow-gray-color: #f1f1f1;
-  --gray-color: #a5a5a9;
-  --box-shadow-color: #e2e0e0;
+    --palette-primary-main: #030303;
+    --palette-primary-dark: #710707;
+    --palette-primary-light: #FFFFFF;
+    --palette-secondary-light: #9d8665;
+    --palette-primary-text: #FFFFFF;
+    --palette-secondary-text: #030303;
+    --palette-tertiary-text: #9d8665;
 }
