--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,5 +1,5 @@
-<!-- <footer class="footer">
+<footer class="footer">
     <div class="footer__wrapper">
-
+        footer
     </div>
-</footer> -->
+</footer>
