--- a/src/scss/_reboot.scss
+++ b/src/scss/_reboot.scss
@@ -1,16 +1,16 @@
 html,
 body {
-  margin: 0 auto;
-  min-height: 100vh;
-  min-width: 320px;
-  width: 100%;
+    margin: 0 auto;
+    min-height: 100vh;
+    min-width: 320px;
+    width: 100%;
 }
 
 body {
-  width: 100%;
-  margin: 0 auto;
-  padding: 0;
-  overflow-x: hidden;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 ul,
@@ -23,6 +23,10 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
 }
