feat: working at burger

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -1,3 +1,4 @@
+<input type="checkbox" id="burger-toggler">
 <header class="header">
     <div class="header__container">
         <a class="header__logo" href="">
@@ -6,6 +7,7 @@
               </svg>
             <span class="header__logo-title">Louvre</span>
         </a>
+        <label for="burger-toggler" class="burger-toggler-btn"></label>
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__list-item">
