--- a/src/html/includes/main/hero.html
+++ b/src/html/includes/main/hero.html
@@ -1,5 +1,63 @@
 <section class="hero">
     <div class="hero__container">
+        <div class="burger">
+            <ul class="nav__list">
+                <li class="nav__list-item">
+                    <a class="nav-link" href="#">Visiting
+                      <svg class="nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
+                          fill="white" />
+                      </svg>
+                    </a>
+                </li>
+                <li class="nav__list-item">
+                    <a class="nav-link" href="#">Explore
+                    <svg class="nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
+                        fill="white" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="nav__list-item">
+                    <a class="nav-link" href="#">Video
+                    <svg class="nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
+                        fill="white" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="nav__list-item">
+                    <a class="nav-link" href="#">Gallery
+                    <svg class="nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path
+                        d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
+                        fill="white" />
+                    </svg>
+                  </a>
+                </li>
+                <li class="nav__list-item">
+                    <a class="nav-link" href="#">Tickets
+                      <svg class="nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
+                          fill="white" />
+                      </svg>
+                    </a>
+                </li>
+                <li class="nav__list-item">
+                    <a class="nav-link" href="#">Contacts
+                      <svg class="nav-link__arrow" width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M7.33346 5.53176L1.9933 0.191706C1.86979 0.068097 1.70492 0 1.52911 0C1.35331 0 1.18843 0.068097 1.06492 0.191706L0.671657 0.584873C0.415757 0.841066 0.415757 1.25745 0.671657 1.51326L5.15591 5.99751L0.666681 10.4867C0.54317 10.6104 0.474976 10.7751 0.474976 10.9508C0.474976 11.1267 0.54317 11.2915 0.666681 11.4152L1.05995 11.8083C1.18356 11.9319 1.34833 12 1.52414 12C1.69994 12 1.86482 11.9319 1.98833 11.8083L7.33346 6.46336C7.45726 6.33936 7.52526 6.1738 7.52487 5.99781C7.52526 5.82112 7.45726 5.65566 7.33346 5.53176Z"
+                          fill="white" />
+                      </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
         <div class="hero__slider">
             <div class="hero__slider-images">
                 <img src="./img/hero/hero-image.jpg" alt="">
@@ -29,11 +87,15 @@
                 </ul>
                 <div class="slider-nav__arrows">
                     <svg class="slider-nav__arrows-left" width="30" height="8" viewBox="0 0 30 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M5.72254 8C3.90173 6.31339 1.99422 5.08262 0 4.30769V3.69231C1.99422 2.89459 3.90173 1.66382 5.72254 0H7.23988C6.37283 1.4359 5.53468 2.52991 4.72543 3.28205H30V4.71795H4.72543C5.53468 5.47009 6.37283 6.5641 7.23988 8H5.72254Z" fill="white"/>
-              </svg>
+            <path
+              d="M5.72254 8C3.90173 6.31339 1.99422 5.08262 0 4.30769V3.69231C1.99422 2.89459 3.90173 1.66382 5.72254 0H7.23988C6.37283 1.4359 5.53468 2.52991 4.72543 3.28205H30V4.71795H4.72543C5.53468 5.47009 6.37283 6.5641 7.23988 8H5.72254Z"
+              fill="white" />
+          </svg>
                     <svg class="slider-nav__arrows-right" width="30" height="8" viewBox="0 0 30 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M24.2775 1.97284e-06C26.0983 1.68661 28.0058 2.91738 30 3.69231L30 4.30769C28.0058 5.10541 26.0983 6.33618 24.2775 8L22.7601 8C23.6272 6.5641 24.4653 5.47009 25.2746 4.71795L3.48964e-07 4.71795L5.01636e-07 3.28205L25.2746 3.28205C24.4653 2.52992 23.6272 1.4359 22.7601 1.86378e-06L24.2775 1.97284e-06Z" fill="white"/>
-                </svg>
+            <path
+              d="M24.2775 1.97284e-06C26.0983 1.68661 28.0058 2.91738 30 3.69231L30 4.30769C28.0058 5.10541 26.0983 6.33618 24.2775 8L22.7601 8C23.6272 6.5641 24.4653 5.47009 25.2746 4.71795L3.48964e-07 4.71795L5.01636e-07 3.28205L25.2746 3.28205C24.4653 2.52992 23.6272 1.4359 22.7601 1.86378e-06L24.2775 1.97284e-06Z"
+              fill="white" />
+          </svg>
                 </div>
             </div>
         </div>
