--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,7 +11,7 @@
 // Mixes
 // Blocks
 @import "blocks/dropdowns";
-@import "blocks/hamburger";
+@import "blocks/burger";
 @import "blocks/buttons";
 @import "blocks/links";
 @import "blocks/socials";
