--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+    position: relative;
     max-height: 810px;
     width: 100%;
     height: 100%;
@@ -15,6 +16,10 @@
         display: flex;
         flex-direction: column;
         align-items: flex-end;
+        @include media-breakpoint-down(xxl) {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
         padding-bottom: 60px;
     }
     &__slider-images {}
