feat: add burger menu

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -1,4 +1,4 @@
-<input type="checkbox" id="burger-toggler">
+<input class="burger-toggler" type="checkbox" id="burger-toggler">
 <header class="header">
     <div class="header__container">
         <a class="header__logo" href="">
@@ -7,7 +7,7 @@
               </svg>
             <span class="header__logo-title">Louvre</span>
         </a>
-        <label for="burger-toggler" class="burger-toggler-btn"></label>
+        <label class="burger-toggler-btn" for="burger-toggler"><span class="burger-toggler-btn__buns"></span></label>
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__list-item">
