--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -21,6 +21,9 @@
     &__logo-title {
         font-family: 'Forum';
         font-size: 28px;
+        @include media-breakpoint-down(sm) {
+            font-size: 16px;
+        }
         letter-spacing: 2px;
         color: var(--palette-primary-text);
         text-transform: uppercase;
