--- a/src/scss/blocks/burger.scss
+++ b/src/scss/blocks/burger.scss
@@ -35,11 +35,8 @@ li {
 
 .burger {
     display: none;
-    @include media-breakpoint-down(xl) {
-        display: flex;
-    }
-    @include media-breakpoint-down(sm) {
-        width: 100%;
+    .socials {
+        display: none;
     }
     position: absolute;
     transform: translateX(-100%);
@@ -73,16 +70,74 @@ li {
         }
     }
     .burger-gallery {
-        display: inline-flex;
-        justify-content: center;
-        gap: 10px;
+        display: none;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
         padding-top: 10px;
         padding-bottom: 10px;
         border-bottom: 1px solid white;
-        &__item {}
+        &__item {
+            display: flex;
+        }
+        &__item:nth-child(1) {
+            width: 100%;
+            height: 100%;
+            grid-row-start: 1;
+            grid-column-start: 1;
+            grid-row-end: 2;
+            grid-column-end: 3;
+        }
+        &__item:nth-child(2) {
+            grid-row-start: 2;
+            grid-column-start: 1;
+            grid-row-end: 3;
+            grid-column-end: 2;
+        }
+        &__item:nth-child(3) {
+            grid-row-start: 2;
+            grid-column-start: 2;
+            grid-row-end: 3;
+            grid-column-end: 3;
+        }
+        &__item:nth-child(2),
+        &__item:nth-child(3) {
+            width: 100%;
+            @include media-breakpoint-down(md) {
+                max-width: 319px;
+                max-height: 161px;
+            }
+            @include media-breakpoint-down(sm) {
+                max-width: 100%;
+                max-height: 100%;
+            }
+        }
         &__item-image {
-            max-width: 95px;
-            max-height: 95px;
+            display: flex;
+            width: 100%;
+            height: 100%;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+        @include media-breakpoint-down(lg) {
+            display: grid;
+            padding: 10px 25px;
+        }
+        @include media-breakpoint-down(sm) {
+            display: inline-flex;
+        }
+    }
+    @include media-breakpoint-down(xl) {
+        display: flex;
+        width: 40%;
+    }
+    @include media-breakpoint-down(lg) {
+        width: 100%;
+        .socials {
+            display: flex;
         }
     }
 }
@@ -91,7 +146,7 @@ li {
     position: relative;
     width: 32px;
     height: 32px;
-    display: flex;
+    display: none;
     align-items: center;
     margin: 10px 20px;
     &__buns {
@@ -114,5 +169,8 @@ li {
         &::after {
             top: 10px;
         }
+    }
+    @include media-breakpoint-down(xl) {
+        display: flex;
     }
 }
