--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -11,22 +11,41 @@
         margin-right: auto;
         padding-top: 50px;
         padding-bottom: 50px;
+        @include media-breakpoint-down(xl) {
+            padding-top: 48px;
+            padding-bottom: 48px;
+        }
+        @include media-breakpoint-down(lg) {
+            padding-top: 35px;
+            padding-bottom: 35px;
+        }
     }
     &__logo {
         display: inline-flex;
         gap: 25px;
         padding: 10px 20px;
     }
-    &__logo-image {}
+    &__logo-image {
+        max-width: 49px;
+        max-height: 26px;
+        width: 100%;
+        height: 100%;
+        @include media-breakpoint-down(md) {
+            max-width: 26px;
+            max-height: 16px;
+        }
+    }
     &__logo-title {
+        display: flex;
+        align-items: center;
         font-family: 'Forum';
         font-size: 28px;
-        @include media-breakpoint-down(sm) {
-            font-size: 16px;
-        }
         letter-spacing: 2px;
         color: var(--palette-primary-text);
         text-transform: uppercase;
+        @include media-breakpoint-down(md) {
+            font-size: 16px;
+        }
     }
 }
 
