--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -1,6 +1,5 @@
 .hero {
     position: relative;
-    max-height: 810px;
     width: 100%;
     height: 100%;
     background-color: var(--palette-primary-main);
@@ -12,24 +11,27 @@
         height: 100%;
         width: 100%;
     }
-    &__slider {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        @include media-breakpoint-down(xxl) {
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-        padding-bottom: 60px;
-    }
-    &__slider-images {}
     &__title {
         position: absolute;
         top: 150px;
-        left: 0;
+        left: 20px;
+        @include media-breakpoint-down(lg) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            position: relative;
+            top: 0;
+            left: 0;
+        }
         .btn {
-            margin-top: 75px;
-            font-family: 'Roboto', sans-serif;
+            display: flex;
+            @include media-breakpoint-down(lg) {
+                display: none;
+            }
+            margin-top: 55px;
+            font-family: 'Roboto',
+            sans-serif;
             font-weight: 300;
             font-size: 22px;
             text-align: center;
@@ -47,6 +49,9 @@
     &__title-text {
         font-family: 'Forum', serif;
         font-size: 80px;
+        @include media-breakpoint-down(xl) {
+            font-size: 40px;
+        }
         font-weight: 400;
         letter-spacing: 5px;
         text-transform: uppercase;
@@ -54,17 +59,45 @@
     }
     &__title-desc {
         margin-top: 20px;
+        margin-bottom: 20px;
         font-family: 'Roboto', sans-serif;
         font-weight: 300;
         font-size: 28px;
+        @include media-breakpoint-down(xl) {
+            font-size: 23px;
+        }
         letter-spacing: 2px;
         color: var(--palette-primary-text);
+    }
+}
+
+.hero-slider {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    @include media-breakpoint-down(xxl) {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    padding-bottom: 60px;
+    &__images {
+        @include media-breakpoint-down(xl) {
+            width: 60%;
+        }
+        @include media-breakpoint-down(lg) {
+            width: 100%;
+        }
+    }
+    &__images-item {
+        width: 100%;
+        height: 100%;
     }
 }
 
 .slider-nav {
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     position: absolute;
     gap: 40px;
     bottom: 5px;
@@ -113,6 +146,9 @@
                 fill: var(--palette-secondary-light);
             }
         }
+    }
+    @include media-breakpoint-down(lg) {
+        width: 100%;
     }
 }
 
