--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -38,7 +38,7 @@
     &__logo-title {
         display: flex;
         align-items: center;
-        font-family: 'Forum';
+        font-family: 'Forum', serif;
         font-size: 28px;
         letter-spacing: 2px;
         color: var(--palette-primary-text);
