--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -4,17 +4,26 @@
     height: 100%;
     background-color: var(--palette-primary-main);
     &__container {
+        display: flex;
+        justify-content: flex-end;
         position: relative;
         margin-left: auto;
         margin-right: auto;
         max-width: 1440px;
         height: 100%;
         width: 100%;
+        padding-right: 20px;
+        padding-left: 20px;
+        @include media-breakpoint-down(lg) {
+            flex-direction: column;
+        }
     }
     &__title {
         position: absolute;
         top: 150px;
         left: 20px;
+        transform: translateX(0%);
+        transition: 0.5s;
         @include media-breakpoint-down(lg) {
             display: flex;
             flex-direction: column;
@@ -31,6 +40,7 @@
             }
             margin-top: 55px;
             font-family: 'Roboto',
+            sans-serif,
             sans-serif;
             font-weight: 300;
             font-size: 22px;
@@ -49,13 +59,16 @@
     &__title-text {
         font-family: 'Forum', serif;
         font-size: 80px;
-        @include media-breakpoint-down(xl) {
-            font-size: 40px;
-        }
         font-weight: 400;
         letter-spacing: 5px;
         text-transform: uppercase;
         color: var(--palette-primary-text);
+        @include media-breakpoint-down(xxl) {
+            font-size: 60px;
+        }
+        @include media-breakpoint-down(xl) {
+            font-size: 45px;
+        }
     }
     &__title-desc {
         margin-top: 20px;
@@ -63,11 +76,11 @@
         font-family: 'Roboto', sans-serif;
         font-weight: 300;
         font-size: 28px;
+        letter-spacing: 2px;
+        color: var(--palette-primary-text);
         @include media-breakpoint-down(xl) {
             font-size: 23px;
         }
-        letter-spacing: 2px;
-        color: var(--palette-primary-text);
     }
 }
 
@@ -75,12 +88,16 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    @include media-breakpoint-down(xxl) {
-        padding-left: 20px;
-        padding-right: 20px;
-    }
     padding-bottom: 60px;
+    @include media-breakpoint-down(xxl) {
+        width: 69%;
+    }
+    @include media-breakpoint-down(xl) {
+        width: 100%;
+    }
     &__images {
+        width: 100%;
+        height: 100%;
         @include media-breakpoint-down(xl) {
             width: 60%;
         }
@@ -107,7 +124,7 @@
     &__slides-counter {
         display: flex;
         gap: 10px;
-        font-family: 'Roboto';
+        font-family: 'Roboto', sans-serif;
         font-size: 22px;
         color: var(--palette-primary-text);
         line-height: 17px;
