feat: working at adaptive

--- a/src/scss/blocks/burger.scss
+++ b/src/scss/blocks/burger.scss
@@ -51,7 +51,7 @@ li {
     background-color: var(--palette-primary-main);
     padding-left: 25px;
     padding-right: 25px;
-    z-index: 1;
+    z-index: 2;
     transition: 0.5s;
     .nav {
         &__list {
@@ -98,9 +98,8 @@ li {
                 object-fit: cover;
             }
         }
-        @include media-breakpoint-down(lg) {
+        @include media-breakpoint-down(md) {
             display: flex;
-            padding: 10px 25px;
         }
         @include media-breakpoint-down(sm) {
             display: inline-flex;
@@ -110,7 +109,7 @@ li {
         display: flex;
         width: 40%;
     }
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(md) {
         width: 100%;
         height: 100%;
         .socials {
