--- a/src/scss/blocks/burger.scss
+++ b/src/scss/blocks/burger.scss
@@ -87,7 +87,21 @@ li {
         border-bottom: 1px solid white;
         &__item {
             display: flex;
+            width: 100%;
+            height: 100%;
+            @include media-breakpoint-down(sm) {
+                max-width: 95px;
+                max-height: 95px;
+            }
         }
+        &__item:nth-child(1) {
+            grid-row-start: 1;
+            grid-column-start: 1;
+            grid-row-end: 2;
+            grid-column-end: 3;
+        }
+        &__item:nth-child(2),
+        &__item:nth-child(3) {}
         &__item-image {
             display: flex;
             width: 100%;
@@ -99,10 +113,15 @@ li {
             }
         }
         @include media-breakpoint-down(md) {
-            display: flex;
+            display: grid;
         }
         @include media-breakpoint-down(sm) {
-            display: inline-flex;
+            display: flex;
+            flex-wrap: nowrap;
+            gap: 10px;
+        }
+        @include media-breakpoint-down(s) {
+            gap: 5px;
         }
     }
     @include media-breakpoint-down(xl) {
