--- a/src/scss/blocks/socials.scss
+++ b/src/scss/blocks/socials.scss
@@ -2,10 +2,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
     gap: 5px;
+    flex-wrap: wrap;
     &__item {
-        width: 48px;
-        height: 48px;
+        max-width: 48px;
+        max-height: 48px;
+        width: 100%;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -13,5 +17,8 @@
         border-radius: 50%;
         padding: 12px;
     }
-    &__item-icon {}
+    &__item-icon {
+        width: 100%;
+        height: 100%;
+    }
 }
