--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -30,7 +30,7 @@
         max-height: 26px;
         width: 100%;
         height: 100%;
-        @include media-breakpoint-down(md) {
+        @include media-breakpoint-down(sm) {
             max-width: 26px;
             max-height: 16px;
         }
@@ -43,7 +43,7 @@
         letter-spacing: 2px;
         color: var(--palette-primary-text);
         text-transform: uppercase;
-        @include media-breakpoint-down(md) {
+        @include media-breakpoint-down(sm) {
             font-size: 16px;
         }
     }
