--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -75,6 +75,12 @@
         @include media-breakpoint-down(xl) {
             font-size: 45px;
         }
+        @include media-breakpoint-down(md) {
+            font-size: 40px;
+        }
+        @include media-breakpoint-down(sm) {
+            font-size: 28px;
+        }
     }
     &__title-desc {
         margin-top: 20px;
@@ -86,6 +92,12 @@
         color: var(--palette-primary-text);
         @include media-breakpoint-down(xl) {
             font-size: 23px;
+        }
+        @include media-breakpoint-down(md) {
+            font-size: 20px;
+        }
+        @include media-breakpoint-down(sm) {
+            font-size: 16px;
         }
     }
 }
@@ -156,6 +168,9 @@
             .slider-nav__bars-toggler {
                 background-color: var(--palette-secondary-light);
             }
+        }
+        @include media-breakpoint-down(md) {
+            padding: 5px;
         }
     }
     &__arrows {
