--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -114,13 +114,26 @@
         width: 100%;
     }
     &__images {
+        position: relative;
         width: 100%;
         height: 100%;
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0.5) 16.19%, rgba(0, 0, 0, 0) 30.73%);
+        }
         @include media-breakpoint-down(xl) {
             width: 60%;
         }
         @include media-breakpoint-down(md) {
             width: 100%;
+            &::before {
+                display: none;
+            }
         }
     }
     &__images-item {
