--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -124,7 +124,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0.5) 16.19%, rgba(0, 0, 0, 0) 30.73%);
+            background: linear-gradient(90deg, var(--palette-primary-main) 0%, rgba(0, 0, 0, 0.5) 16.19%, rgba(0, 0, 0, 0) 30.73%);
         }
         @include media-breakpoint-down(xl) {
             width: 60%;
