feat: add sections

--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -3,6 +3,9 @@
         <%= _.template(require('./../includes/header.html').default)(data) %>
             <main class="main">
                 <%= _.template(require('./../includes/main/hero.html').default)(data) %>
+                    <%= _.template(require('./../includes/main/visiting.html').default)(data) %>
+                        <%= _.template(require('./../includes/main/explore.html').default)(data) %>
+                            <%= _.template(require('./../includes/main/journey.html').default)(data) %>
             </main>
             <!-- <%= _.template(require('./../includes/footer.html').default)(data) %> -->
             <%= _.template(require('./../includes/_html-bottom.html').default)(data) %>
