--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,8 +15,12 @@
 @import "blocks/buttons";
 @import "blocks/links";
 @import "blocks/socials";
+@import "blocks/title";
 //Sections
 @import "sections/header";
 @import "sections/main";
 @import "sections/hero";
+@import "sections/visiting";
+@import "sections/explore";
+@import "sections/journey";
 @import "sections/footer";
