--- a/src/html/includes/main/hero.html
+++ b/src/html/includes/main/hero.html
@@ -106,9 +106,11 @@
             </ul>
         </div>
         <div class="hero__title">
-            <h1 class="hero__title-text">Welcome <br> to the Louvre</h1>
+            <h2 class="title">Welcome <br> to the Louvre</h2>
             <p class="hero__title-desc">From the castle to the museum</p>
-            <button class="btn">Discover the Louvre</button>
+            <a class="btn" href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736">
+            Discover the Louvre
+          </a>
         </div>
         <div class="hero-slider">
             <div class="hero-slider__images">
