--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -4,14 +4,14 @@
     height: 100%;
     background-color: var(--palette-primary-main);
     &__container {
+        max-width: 1440px;
+        height: 100%;
+        width: 100%;
         display: flex;
         justify-content: flex-end;
         position: relative;
         margin-left: auto;
         margin-right: auto;
-        max-width: 1440px;
-        height: 100%;
-        width: 100%;
         padding-right: 20px;
         padding-left: 20px;
         padding-bottom: 60px;
@@ -26,6 +26,9 @@
         transform: translateX(0%);
         transition: 0.5s;
         z-index: 1;
+        .title {
+            color: var(--palette-primary-text);
+        }
         @include media-breakpoint-down(md) {
             display: flex;
             flex-direction: column;
@@ -36,12 +39,14 @@
             left: 0;
         }
         .btn {
+            max-width: 360px;
             display: flex;
+            align-items: center;
+            justify-content: center;
             margin-top: 55px;
             font-family: 'Roboto', sans-serif, sans-serif;
             font-weight: 300;
             font-size: 22px;
-            text-align: center;
             letter-spacing: 2px;
             padding: 25px 64px;
             border: none;
@@ -55,31 +60,12 @@
                 padding: 20px 50px;
             }
             @include media-breakpoint-down(lg) {
+                max-width: 320px;
                 padding: 15px 40px;
             }
             @include media-breakpoint-down(md) {
                 display: none;
             }
-        }
-    }
-    &__title-text {
-        font-family: 'Forum', serif;
-        font-size: 80px;
-        font-weight: 400;
-        letter-spacing: 5px;
-        text-transform: uppercase;
-        color: var(--palette-primary-text);
-        @include media-breakpoint-down(xxl) {
-            font-size: 60px;
-        }
-        @include media-breakpoint-down(xl) {
-            font-size: 45px;
-        }
-        @include media-breakpoint-down(md) {
-            font-size: 40px;
-        }
-        @include media-breakpoint-down(sm) {
-            font-size: 28px;
         }
     }
     &__title-desc {
