--- a/src/scss/sections/_journey.scss
+++ b/src/scss/sections/_journey.scss
@@ -82,26 +82,56 @@
 .fullscreen-icon {}
 
 .journey-slider {
-    // display: flex;
-    display: none;
+    display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     gap: 20px;
     width: 100%;
+    margin-top: 30px;
 }
 
-.slider-prev {}
+.slider-next,
+.slider-prev {
+    cursor: pointer;
+    transition: 0.3s;
+    &:hover {
+        transform: scale(1.2);
+    }
+    @include media-breakpoint-down(md) {
+        display: none;
+    }
+}
 
 .slider {
     &__list {
-        max-width: 1300px;
+        width: 100%;
         overflow: hidden;
         display: flex;
+        justify-content: center;
+        align-items: center;
         gap: 80px;
+        @include media-breakpoint-down(xxl) {
+            gap: 10px;
+        }
+        @include media-breakpoint-down(md) {
+            flex-direction: column;
+        }
     }
-    &__list-item {}
+    &__list-item {
+        display: flex;
+        max-width: 380px;
+        max-height: 220px;
+        width: 100%;
+        height: 10%;
+        @include media-breakpoint-down(md) {
+            max-width: 100%;
+        }
+    }
 }
 
-.slider-video {}
-
-.slider-next {}
+.slider-video {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    min-height: 220px;
+}
