feat: add gallery

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -23,4 +23,5 @@
 @import "sections/visiting";
 @import "sections/explore";
 @import "sections/journey";
+@import "sections/gallery";
 @import "sections/footer";
