--- a/src/scss/blocks/socials.scss
+++ b/src/scss/blocks/socials.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 48px;
     gap: 5px;
     flex-wrap: wrap;
     &__item {
