feat: work in burger menu

--- a/src/html/includes/main/explore.html
+++ b/src/html/includes/main/explore.html
@@ -1,4 +1,4 @@
-<section class="explore">
+<section id="explore" class="explore">
     <div class="explore__container">
         <div class="explore-left">
             <div class="explore-left__title">
