--- a/src/html/includes/main/gallery.html
+++ b/src/html/includes/main/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery">
+<section id="gallery" class="gallery">
     <div class="gallery__container">
         <h2 class="title">Art Gallery</h2>
         <div class="gallery__body">
