--- a/src/html/includes/main/visiting.html
+++ b/src/html/includes/main/visiting.html
@@ -1,4 +1,4 @@
-<section class="visiting">
+<section id="visiting" class="visiting">
     <div class="visiting__container">
         <div class="visiting__title">
             <h2 class="visiting__title-text">
