--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -5,10 +5,10 @@
 .burger-toggler:checked {
     &~.header {
         .header__container {
-            .burger {
+            .burger-menu {
                 transform: translateX(0%);
             }
-            .burger-toggler-btn {
+            .burger {
                 width: 26px;
                 height: 26px;
                 &__buns {
@@ -27,11 +27,17 @@
         }
     }
     &~.main {
+        @include media-breakpoint-down(xl) {
+            .hero {
+                &__container {
+                    .hero__title {
+                        transform: translateX(-100%);
+                    }
+                }
+            }
+        }
         @include media-breakpoint-down(md) {
             overflow-y: hidden;
-            position: fixed;
-            top: 122px;
-            left: 0;
             .hero {
                 &__container {
                     opacity: 0;
@@ -41,11 +47,12 @@
     }
 }
 
-.burger {
+.burger-menu {
     display: none;
     flex-direction: column;
+    max-height: 515px;
     height: 100%;
-    position: fixed;
+    position: absolute;
     transform: translateX(-100%);
     top: 115px;
     left: 0;
@@ -57,6 +64,9 @@
     gap: 10px;
     &__container {
         overflow: auto;
+        .socials {
+            display: none;
+        }
     }
     @include media-breakpoint-down(xl) {
         display: flex;
@@ -64,6 +74,7 @@
     }
     @include media-breakpoint-down(md) {
         width: 100%;
+        max-height: 100vh;
         height: 100vh;
         padding-bottom: 180px;
         &__container {
@@ -76,7 +87,7 @@
             }
         }
     }
-    .nav {
+    .burger-nav {
         &__list {
             flex-direction: column;
             align-items: flex-start;
@@ -87,12 +98,12 @@
                 display: inline-flex;
                 justify-content: space-between;
                 align-items: center;
-                .nav-link__arrow {
+                .burger-nav-link__arrow {
                     width: 20px;
                     margin-left: 10px;
                 }
                 &:hover {
-                    .nav-link__arrow {
+                    .burger-nav-link__arrow {
                         path {
                             fill: var(--palette-secondary-light);
                         }
@@ -116,7 +127,6 @@
         &__item {
             display: flex;
             width: 100%;
-            height: 100%;
             @include media-breakpoint-down(sm) {
                 max-width: 95px;
                 max-height: 95px;
@@ -152,7 +162,7 @@
     }
 }
 
-.burger-toggler-btn {
+.burger {
     position: relative;
     width: 32px;
     height: 23px;
